@startuml
class com.android.app.ExampleInstrumentedTest {
+ void useAppContext()
}
class com.android.app.Identificador {
# JSONArray json
+ String getObject(int,int)
- boolean estaContenido(JSONObject,int,int)
}
class com.android.app.MainActivity {
- {static} int CAMERA_PERMISSION_CODE
- {static} String TAG
~ ActivityResultLauncher<Intent> cameraLauncher
~ ActivityResultLauncher<Intent> galleryLauncher
~ String textTo
- TextToSpeech textToSpeech
- FireFunctions firebase
- ImageView ivPicture
- TextView tvResult
- ImageButton btnChoosePicture
- ImageButton decirDescripcion
- Imagen imagen
# void onCreate(Bundle)
# void onResume()
+ void CheckPermission(String,int)
}
class com.android.app.Descripcion {
# String texto
+ String getTexto()
}
class com.android.app.Query {
# JSONObject json
}
class com.android.app.Imagen {
# Uri imageUri
- String base64
# Context contexto
+ String getImageUri()
+ String getBase64()
- void codBase64(Uri)
+ void rotarImagen(Intent,ImageView)
- boolean sacarRelacion(Intent)
+ void cortarImagen(Bitmap,int[],ImageView)
}
class com.android.app.FireFunctions {
# FirebaseFunctions fFunc
+ Task<Descripcion> callImagen(String)
+ Task<Identificador> callTags(String)
+ Task<Traduccion> translatedImage(String)
}
class com.android.app.ExampleUnitTest {
+ void addition_isCorrect()
}
class com.android.app.Traduccion {
# String texto
+ String getTexto()
}


androidx.appcompat.app.AppCompatActivity <|-- com.android.app.MainActivity
com.android.app.Query <|-- com.android.app.Descripcion
com.android.app.Query <|-- com.android.app.Traduccion
@enduml